--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.4",
     "vue": "^2.6.12",
     "vue-google-charts": "^0.3.3",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.4.0",
