--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.7.1",
     "moment": "^2.29.4",
     "vue": "^2.6.12",
+    "vue-easy-lightbox": "^0.20.0",
     "vue-google-charts": "^0.3.3",
     "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.2.0",
