--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-easy-lightbox": "^0.20.0",
     "vue-google-charts": "^0.3.3",
     "vue-html2pdf": "^1.8.0",
+    "vue-number-animation": "^1.1.2",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.7.1",
