--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "moment": "^2.29.4",
+    "moment-range": "^4.0.2",
     "vue": "^2.6.12",
     "vue-easy-lightbox": "^0.20.0",
     "vue-google-charts": "^0.3.3",
