--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-number-animation": "^1.1.2",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.3",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
