--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.7.1",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
+    "togeojson": "^0.16.0",
     "vue": "^2.6.12",
     "vue-easy-lightbox": "^0.20.0",
     "vue-google-charts": "^0.3.3",
