--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
