--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
+    "lottie-web-vue": "^1.2.1",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
     "togeojson": "^0.16.0",
