--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-web-vue": "^1.2.1",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
+    "sweetalert2": "^11.7.5",
     "togeojson": "^0.16.0",
     "vue": "^2.6.12",
     "vue-easy-lightbox": "^0.20.0",
