--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.0.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
     "lottie-web-vue": "^1.2.1",
