--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sweetalert2": "^11.7.5",
     "togeojson": "^0.16.0",
     "vue": "^2.7.14",
+    "vue-barcode": "^1.3.0",
     "vue-easy-lightbox": "^0.20.0",
     "vue-google-charts": "^0.3.3",
     "vue-html2pdf": "^1.8.0",
