--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "vue-google-charts": "^0.3.3",
     "vue-html2pdf": "^1.8.0",
     "vue-number-animation": "^1.1.2",
+    "vue-qrcode": "^2.2.0",
+    "vue-qrcode-component": "^2.1.1",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.3",
