--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
@@ -17,6 +18,7 @@
     "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
     "lottie-web-vue": "^1.2.1",
+    "material-design-icons-iconfont": "^6.7.0",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
     "sweetalert2": "^11.7.5",
@@ -38,6 +40,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.66",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
