--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "lottie-web-vue": "^1.2.1",
     "material-design-icons-iconfont": "^6.7.0",
     "moment": "^2.29.4",
